Add setting to disable insertion of stats.
Useful to disable when testing or developing other features.

--- a/service/configurationTemplate.properties
+++ b/service/configurationTemplate.properties
@@ -63,6 +63,10 @@ net.offlinePollingIntervalMinutes=10
 # to logs instead.
 database.enabled=false
 
+# Whether to insert data pulled from the heat pump. Useful to disable when
+# testing other features.
+database.databaseStatsInsertionEnabled=true
+
 # Which database driver to use. Only embedded drivers supported. If you use a
 # different database, add its driver to the Maven POM and rebuild the
 # application.
