Write statistics to a JSON file.

--- a/service/configurationTemplate.properties
+++ b/service/configurationTemplate.properties
@@ -85,6 +85,18 @@ database.schema=zealuxmonitor
 
 
 # ------------------------------------------------------------------------------
+# Chart Data Settings
+# ------------------------------------------------------------------------------
+
+# How often to update chart data, in minutes. Use 0 to disable.
+chart.updateInterval=3
+
+# File to write chart data to. JSON format. Absolute path or relative to the
+# working directory.
+chart.dataFile=chart/data.json
+
+
+# ------------------------------------------------------------------------------
 # Debug Settings
 # ------------------------------------------------------------------------------
 
