--- a/service/pom.xml
+++ b/service/pom.xml
@@ -91,6 +91,11 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>4.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
