Add simple page for displaying a chart with statistics.
Currently only displays data from the past two days. Can easily be changed to show other series.

The JSON data file has the same structure as the ChartData class.

--- a/service/configurationTemplate.properties
+++ b/service/configurationTemplate.properties
@@ -91,9 +91,9 @@ database.schema=zealuxmonitor
 # How often to update chart data, in minutes. Use 0 to disable.
 chart.updateInterval=3
 
-# File to write chart data to. JSON format. Absolute path or relative to the
-# working directory.
-chart.dataFile=chart/data.json
+# File to write JSON chart data to. Should be in the www folder at the location you
+# installed it to. Absolute path or relative to the working directory.
+chart.dataFile=www/data.json
 
 
 # ------------------------------------------------------------------------------
