Change default database schema to "public".

--- a/service/configurationTemplate.properties
+++ b/service/configurationTemplate.properties
@@ -81,7 +81,7 @@ database.password=password
 
 # Which schema to use. When starting up the application will create or update
 # tables as necessary.
-database.schema=zealuxmonitor
+database.schema=public
 
 
 # ------------------------------------------------------------------------------
