Add start time setting for long term charts.

--- a/service/configurationTemplate.properties
+++ b/service/configurationTemplate.properties
@@ -95,6 +95,9 @@ chart.updateInterval=3
 # installed it to. Absolute path or relative to the working directory.
 chart.dataFile=www/data.json
 
+# ISO 8601 instant of how far back in time to render long term charts.
+chart.seasonStartTime=2022-05-01T00:00:00Z
+
 
 # ------------------------------------------------------------------------------
 # Debug Settings
