Fix a typo in configurationTemplate.properties

--- a/service/configurationTemplate.properties
+++ b/service/configurationTemplate.properties
@@ -16,7 +16,7 @@ device.host=device.example.com
 device.port=1194
 
 # Serial number of the device. Required for authentication.
-# Replace with you device's serial number.
+# Replace with your device's serial number.
 device.serialNumber=111111111111
 
 # Password set on the device. Default is "123456".
